--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "material": "^0.4.3",
     "primeicons": "^5.0.0",
     "primeng": "^14.0.1",
     "rxjs": "~7.5.0",
